Fri Oct 13 17:17:30 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADExplorer.java: Add COMPSOLID.

Wed Oct 11 15:10:08 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src-occ/org/jcae/mesh/cad/occ/OCCShape.java: The object returned by
	OCCShape.reversed() has the same class as original.

Tue Oct 10 16:11:07 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java: Mesh faces only once even of they
	appear with different orientations.

Fri Apr  7 10:46:00 CEST 2006 Jerome Robert <jeromerobert@users.sourceforge.net> 

	* build.properties, build.xml, src/org/jcae/mesh/MeshView.java,
	  src/org/jcae/mesh/java3d/ComputeEdgesConnectivity.java,
	  src/org/jcae/mesh/java3d/XMLBranchGroup.java,
	  src/org/jcae/mesh/xmldata/MMesh1DReader.java,
	  src/org/jcae/mesh/xmldata/MMesh3DReader.java,
	  src/org/jcae/mesh/xmldata/MeshReader.java,
	  src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java,
	  src/org/jcae/mesh/xmldata/MeshToSoupConvert.java: Used XPath
	  standard API. Xalan is no longer required with Java 1.5 but it is
	  required with Java 1.4.

Thu Apr  6 17:24:19 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Initial.java:  Detect boundary intersection.

Thu Mar 23 15:36:46 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/algos1d/UniformLengthDeflection.java: Apply the same change as in UniformLength.

Wed Mar 22 09:42:45 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Metric2D.java
	  src/org/jcae/mesh/amibe/metrics/Metric3D.java
	  src/org/jcae/mesh/Mesher.java: Add a new org.jcae.mesh.Mesher.isotropic property. It is true by default. If set to false, 2D mesh is anisotropic.

	* src/org/jcae/mesh/Mesher.java
	  src/org/jcae/mesh/xmldata/UNVConverter.java: New org.jcae.mesh.exportPOLY property.
